# ungrasp

./: .gitignore  README.md  noxfile.py  prek.toml  pyproject.toml  ty.toml
docs/: api.md  api.rst  conf.py  index.md  index.rst  installation.md  installation.rst  usage.md  usage.rst
mathematica-notebooks/: Hertzian dipole validation.nb
src/ungrasp/: __init__.py  coord_sys.py  core.py  io.py  tests.py
src/ungrasp/test_data/: hertzian_e_dipole_x.sph  hertzian_e_dipole_y.sph  hertzian_h_dipole_z.sph  multi_frequency.sph
tests/: conftest.py  test_auto_align.py  test_beams.py  test_calc.py  test_coord_sys.py  test_electric_field.py  test_io.py  test_rotations.py  test_to_texture.py  test_total_power.py  test_translate_phase.py  utils.py
tests/data/: hertzian_e_dipole_z.sph  hertzian_h_dipole_x.sph  hertzian_h_dipole_y.sph
